Added list for arxiv fetching

--- a/msbot/msbot_testing.ipynb
+++ b/msbot/msbot_testing.ipynb
@@ -1,32 +1,42 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "proprietary-consciousness",
+   "metadata": {
+    "heading_collapsed": true
+   },
+   "source": [
+    "# Testing pymsteams"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "foreign-reasoning",
+   "execution_count": 1,
+   "id": "level-howard",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-25T14:23:56.049155Z",
-     "start_time": "2021-01-25T14:23:56.045103Z"
-    }
+     "end_time": "2021-01-26T13:54:14.205738Z",
+     "start_time": "2021-01-26T13:54:13.884665Z"
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "\n",
     "import msbot\n",
     "import pymsteams"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "difficult-caribbean",
+   "execution_count": 2,
+   "id": "analyzed-stanford",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-25T14:23:56.238264Z",
-     "start_time": "2021-01-25T14:23:56.235219Z"
-    }
+     "end_time": "2021-01-26T13:54:14.212556Z",
+     "start_time": "2021-01-26T13:54:14.208596Z"
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -37,13 +47,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "recent-chile",
+   "execution_count": 3,
+   "id": "manual-bottle",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-25T14:23:56.443635Z",
-     "start_time": "2021-01-25T14:23:56.440647Z"
-    }
+     "end_time": "2021-01-26T13:54:14.417561Z",
+     "start_time": "2021-01-26T13:54:14.413563Z"
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -53,13 +64,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "gentle-overall",
+   "execution_count": 4,
+   "id": "absent-blowing",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-25T14:23:56.670108Z",
-     "start_time": "2021-01-25T14:23:56.666112Z"
-    }
+     "end_time": "2021-01-26T13:54:14.829562Z",
+     "start_time": "2021-01-26T13:54:14.825559Z"
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -72,13 +84,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "curious-settle",
+   "execution_count": 5,
+   "id": "laden-bennett",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-25T14:23:56.877107Z",
-     "start_time": "2021-01-25T14:23:56.873112Z"
-    }
+     "end_time": "2021-01-26T13:54:15.232495Z",
+     "start_time": "2021-01-26T13:54:15.228494Z"
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -86,18 +99,20 @@
     "myTeamsMessage.title(title)\n",
     "myTeamsMessage.text(text)\n",
     "myTeamsMessage.addLinkButton(button_text, paper_link)\n",
+    "myTeamsMessage.addLinkButton(button_text, paper_link)\n",
     "myTeamsMessage.color(color)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "structural-press",
+   "execution_count": 6,
+   "id": "following-tourist",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-25T14:23:57.198112Z",
-     "start_time": "2021-01-25T14:23:57.194108Z"
-    }
+     "end_time": "2021-01-26T13:54:15.742899Z",
+     "start_time": "2021-01-26T13:54:15.737897Z"
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -105,23 +120,20 @@
     "myMessageSection = pymsteams.cardsection()\n",
     "\n",
     "# Section Title\n",
-    "myMessageSection.title(\"Section title\")\n",
-    "\n",
-    "# Activity Elements\n",
-    "myMessageSection.activityTitle(\"my activity title\")\n",
-    "myMessageSection.activitySubtitle(\"my activity subtitle\")\n",
-    "myMessageSection.activityImage(\"http://i.imgur.com/c4jt321l.png\")\n",
-    "myMessageSection.activityText(\"This is my activity Text\")\n",
-    "\n",
-    "# Facts are key value pairs displayed in a list.\n",
-    "myMessageSection.addFact(\"this\", \"is fine\")\n",
-    "myMessageSection.addFact(\"this is\", \"also fine\")\n",
+    "myMessageSection.title(\"First section\")\n",
     "\n",
     "# Section Text\n",
-    "myMessageSection.text(\"This is my section text\")\n",
+    "myMessageSection.text(\"This is the first section\")\n",
+    "\n",
+    "# Activity Elements\n",
+    "myMessageSection.activityTitle(\"This is Lukas S.\")\n",
+    "myMessageSection.activitySubtitle(\"Lukas S. is a PhD candidate in QuTech\")\n",
+    "myMessageSection.activityImage(\"https://qutech.nl/wp-content/uploads/2019/09/Lukas-Splitthoff_web-1024x1024.jpg\")\n",
+    "myMessageSection.activityText(\"Hello hello, here you got some text. How are you doing today Lukas S.?\")\n",
     "\n",
     "# Section Images\n",
-    "myMessageSection.addImage(\"http://i.imgur.com/c4jt321l.png\", ititle=\"This Is Fine\")\n",
+    "myMessageSection.addImage(\"https://media-exp1.licdn.com/dms/image/C4D03AQH10MkwI0NiBQ/profile-displayphoto-shrink_200_200/0/1585856084148?e=1617235200&v=beta&t=tZbyxeyy7Om4pC2ho-VIUh5_p8Q5wXq70G3se3M0qKw\", \n",
+    "                          ititle=\"This Alina Kulesh\")\n",
     "\n",
     "# Add your section to the connector card object before sending\n",
     "myTeamsMessage.addSection(myMessageSection)\n",
@@ -129,7 +141,7 @@
     "\n",
     "# Create Section 2\n",
     "Section2 = pymsteams.cardsection()\n",
-    "Section2.text(\"My Second Section\")\n",
+    "Section2.text(\"This is my second section\")\n",
     "\n",
     "# Add Section 2 to the main card object\n",
     "myTeamsMessage.addSection(Section2)"
@@ -137,21 +149,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "spiritual-engine",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "id": "several-weather",
+   "execution_count": 7,
+   "id": "turkish-terrace",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-25T14:23:58.559974Z",
-     "start_time": "2021-01-25T14:23:58.553962Z"
-    }
+     "end_time": "2021-01-26T13:54:16.325793Z",
+     "start_time": "2021-01-26T13:54:16.317793Z"
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -159,7 +164,7 @@
      "output_type": "stream",
      "text": [
       "hookurl: https://tud365.webhook.office.com/webhookb2/b30f04eb-e52a-4b70-9920-d9e52953b8ca@096e524d-6929-4030-8cd3-8ab42de0887b/IncomingWebhook/e8044a75137048fcb8eb0d604c097e2e/e21735a8-e851-494f-99ba-2e0e9cfe3b6d\n",
-      "payload: {'title': 'New cool paper found!!', 'text': 'Take a look at this new paper that I found in the arXiv', 'potentialAction': [{'@context': 'http://schema.org', '@type': 'ViewAction', 'name': 'Go to paper', 'target': ['https://arxiv.org/abs/1910.07978']}], 'themeColor': '#40E0D0', 'sections': [{'title': 'Section title', 'activityTitle': 'my activity title', 'activitySubtitle': 'my activity subtitle', 'activityImage': 'http://i.imgur.com/c4jt321l.png', 'activityText': 'This is my activity Text', 'facts': [{'name': 'this', 'value': 'is fine'}, {'name': 'this is', 'value': 'also fine'}], 'text': 'This is my section text', 'images': [{'image': 'http://i.imgur.com/c4jt321l.png', 'title': 'This Is Fine'}]}, {'text': 'My Second Section'}]}\n"
+      "payload: {'title': 'New cool paper found!!', 'text': 'Take a look at this new paper that I found in the arXiv', 'potentialAction': [{'@context': 'http://schema.org', '@type': 'ViewAction', 'name': 'Go to paper', 'target': ['https://arxiv.org/abs/1910.07978']}, {'@context': 'http://schema.org', '@type': 'ViewAction', 'name': 'Go to paper', 'target': ['https://arxiv.org/abs/1910.07978']}], 'themeColor': '#40E0D0', 'sections': [{'title': 'First section', 'text': 'This is the first section', 'activityTitle': 'This is Lukas S.', 'activitySubtitle': 'Lukas S. is a PhD candidate in QuTech', 'activityImage': 'https://qutech.nl/wp-content/uploads/2019/09/Lukas-Splitthoff_web-1024x1024.jpg', 'activityText': 'Hello hello, here you got some text. How are you doing today Lukas S.?', 'images': [{'image': 'https://media-exp1.licdn.com/dms/image/C4D03AQH10MkwI0NiBQ/profile-displayphoto-shrink_200_200/0/1585856084148?e=1617235200&v=beta&t=tZbyxeyy7Om4pC2ho-VIUh5_p8Q5wXq70G3se3M0qKw', 'title': 'This Alina Kulesh'}]}, {'text': 'This is my second section'}]}\n"
      ]
     }
    ],
@@ -169,13 +174,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "banner-jonathan",
+   "execution_count": 8,
+   "id": "hispanic-duncan",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-25T14:24:02.552087Z",
-     "start_time": "2021-01-25T14:23:59.083189Z"
-    }
+     "end_time": "2021-01-26T13:54:17.989903Z",
+     "start_time": "2021-01-26T13:54:16.566509Z"
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -184,7 +190,7 @@
        "True"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,9 +201,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "exempt-journal",
+   "metadata": {},
+   "source": [
+    "# Testing integration with arxiv_majorana_crawler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "selected-typing",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-01-26T13:58:15.867649Z",
+     "start_time": "2021-01-26T13:58:14.493653Z"
+    },
+    "code_folding": [
+     0
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "# Import fetch_arxiv\n",
+    "path_arxiv_crawler_1 = \"../../\"\n",
+    "path_arxiv_crawler_2 = \"../../arxiv_majorana_crawler\"\n",
+    "import sys\n",
+    "sys.path.append(path_arxiv_crawler_1)\n",
+    "sys.path.append(path_arxiv_crawler_2)\n",
+    "from arxiv_majorana_crawler import fetch_arxiv"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "furnished-bacon",
+   "id": "disturbed-thought",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -205,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "continent-thunder",
+   "id": "scientific-spending",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -213,7 +251,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "general-regard",
+   "id": "critical-bullet",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "chinese-telescope",
    "metadata": {},
    "outputs": [],
    "source": []
