--- a/msbot/msbot_testing.ipynb
+++ b/msbot/msbot_testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "proprietary-consciousness",
+   "id": "painful-reporter",
    "metadata": {
     "heading_collapsed": true
    },
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "level-howard",
+   "id": "fixed-virus",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-26T13:54:14.205738Z",
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "analyzed-stanford",
+   "id": "funky-illustration",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-26T13:54:14.212556Z",
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "manual-bottle",
+   "id": "moral-reason",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-26T13:54:14.417561Z",
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "absent-blowing",
+   "id": "manual-pregnancy",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-26T13:54:14.829562Z",
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "laden-bennett",
+   "id": "better-enlargement",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-26T13:54:15.232495Z",
@@ -106,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "following-tourist",
+   "id": "integrated-sleeve",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-26T13:54:15.742899Z",
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "turkish-terrace",
+   "id": "psychological-client",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-26T13:54:16.325793Z",
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "hispanic-duncan",
+   "id": "moderate-apple",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-26T13:54:17.989903Z",
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "exempt-journal",
+   "id": "cognitive-retail",
    "metadata": {},
    "source": [
     "# Testing integration with arxiv_majorana_crawler"
@@ -210,16 +210,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "selected-typing",
+   "execution_count": 21,
+   "id": "hindu-sussex",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-26T13:58:15.867649Z",
-     "start_time": "2021-01-26T13:58:14.493653Z"
+     "end_time": "2021-01-26T14:19:19.190727Z",
+     "start_time": "2021-01-26T14:19:19.187730Z"
     },
-    "code_folding": [
-     0
-    ]
+    "code_folding": []
    },
    "outputs": [],
    "source": [
@@ -234,8 +232,204 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "id": "unable-proceeding",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-01-26T14:19:19.440253Z",
+     "start_time": "2021-01-26T14:19:19.437254Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "query_imput = \"../search_query_list.txt\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "cognitive-brick",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-01-26T14:19:21.113975Z",
+     "start_time": "2021-01-26T14:19:19.795077Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "result_list = fetch_arxiv.query_arxiv_org(debug_mode=True, query_input=query_imput)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "restricted-papua",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-01-26T14:22:44.885596Z",
+     "start_time": "2021-01-26T14:22:44.875594Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'id': '2101.09958', 'author_list': 'Kyoung Hwan Choi, Dong Hack Suh', 'title': 'The Origin of Aromaticity: Aromatic Compounds as Intrinsic Topological Superconductors with Majorana Fermion', 'arxiv_primary_category': 'cond-mat.supr-con', 'published': '2021-01-25 08:56:25', 'link': 'http://arxiv.org/abs/2101.09958v1'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "paper = result_list[0]\n",
+    "print(paper)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "entire-preliminary",
+   "metadata": {},
+   "source": [
+    "# Making relevant functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "romance-refrigerator",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-01-26T14:19:21.320158Z",
+     "start_time": "2021-01-26T14:19:21.315177Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import msbot\n",
+    "import pymsteams"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "young-variable",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-01-26T14:21:28.157730Z",
+     "start_time": "2021-01-26T14:21:28.155726Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# You must create the connectorcard object with the Microsoft Webhook URL\n",
+    "address_general = \"https://tud365.webhook.office.com/webhookb2/b30f04eb-e52a-4b70-9920-d9e52953b8ca@096e524d-6929-4030-8cd3-8ab42de0887b/IncomingWebhook/9f828c3733af424a8fdb5875c373b239/e21735a8-e851-494f-99ba-2e0e9cfe3b6d\"\n",
+    "address_arxiv = \"https://tud365.webhook.office.com/webhookb2/b30f04eb-e52a-4b70-9920-d9e52953b8ca@096e524d-6929-4030-8cd3-8ab42de0887b/IncomingWebhook/e8044a75137048fcb8eb0d604c097e2e/e21735a8-e851-494f-99ba-2e0e9cfe3b6d\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "suffering-working",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-01-26T14:30:08.224897Z",
+     "start_time": "2021-01-26T14:30:08.219900Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def fill_message(paper, message):\n",
+    "    \n",
+    "    title = paper[\"title\"]\n",
+    "    text = \"\"\n",
+    "    for key in paper:\n",
+    "        text += (key + \": \" + paper[key] + \"\\n\")\n",
+    "    button_text = \"Go to paper in arXiv\"\n",
+    "    paper_link = paper[\"link\"]\n",
+    "    color = \"#40E0D0\"\n",
+    "#     section1 = pymsteams.cardsection() # Create a section\n",
+    "#     section1.title(paper[\"title\"]) # Section Title\n",
+    "#     section1.text(\"Author list: {}\".format(paper[\"author_list\"])) # Section Text\n",
+    "    \n",
+    "    # Add text to the message.\n",
+    "    message.title(title)\n",
+    "    message.text(f'<pre>\\n{text}\\n</pre>')\n",
+    "    message.addLinkButton(button_text, paper_link)\n",
+    "    message.color(color)\n",
+    "#     message.addSection(section1)\n",
+    "    \n",
+    "\n",
+    "\n",
+    "#     # Activity Elements\n",
+    "#     myMessageSection.activityTitle(\"This is Lukas S.\")\n",
+    "#     myMessageSection.activitySubtitle(\"Lukas S. is a PhD candidate in QuTech\")\n",
+    "#     myMessageSection.activityImage(\"https://qutech.nl/wp-content/uploads/2019/09/Lukas-Splitthoff_web-1024x1024.jpg\")\n",
+    "#     myMessageSection.activityText(\"Hello hello, here you got some text. How are you doing today Lukas S.?\")\n",
+    "\n",
+    "#     # Section Images\n",
+    "#     myMessageSection.addImage(\"https://media-exp1.licdn.com/dms/image/C4D03AQH10MkwI0NiBQ/profile-displayphoto-shrink_200_200/0/1585856084148?e=1617235200&v=beta&t=tZbyxeyy7Om4pC2ho-VIUh5_p8Q5wXq70G3se3M0qKw\", \n",
+    "#                               ititle=\"This Alina Kulesh\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "agreed-success",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-01-26T14:30:09.322911Z",
+     "start_time": "2021-01-26T14:30:09.319910Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "message = pymsteams.connectorcard(address_arxiv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "fuzzy-clock",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-01-26T14:30:09.563908Z",
+     "start_time": "2021-01-26T14:30:09.559905Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "fill_message(paper, message)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "palestinian-mechanics",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-01-26T14:30:10.685752Z",
+     "start_time": "2021-01-26T14:30:09.970794Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "message.send()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "disturbed-thought",
+   "id": "smaller-adams",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -243,23 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "scientific-spending",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "critical-bullet",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "chinese-telescope",
+   "id": "shaped-anchor",
    "metadata": {},
    "outputs": [],
    "source": []
