--- a/msbot/msbot_testing.ipynb
+++ b/msbot/msbot_testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "painful-reporter",
+   "id": "personalized-criminal",
    "metadata": {
     "heading_collapsed": true
    },
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "fixed-virus",
+   "id": "virgin-poison",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-26T13:54:14.205738Z",
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "funky-illustration",
+   "id": "attached-ratio",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-26T13:54:14.212556Z",
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "moral-reason",
+   "id": "reverse-debate",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-26T13:54:14.417561Z",
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "manual-pregnancy",
+   "id": "polar-appearance",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-26T13:54:14.829562Z",
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "better-enlargement",
+   "id": "marine-brown",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-26T13:54:15.232495Z",
@@ -106,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "integrated-sleeve",
+   "id": "radio-occasions",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-26T13:54:15.742899Z",
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "psychological-client",
+   "id": "equal-balance",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-26T13:54:16.325793Z",
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "moderate-apple",
+   "id": "charming-triple",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-26T13:54:17.989903Z",
@@ -202,8 +202,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cognitive-retail",
-   "metadata": {},
+   "id": "attempted-constraint",
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Testing integration with arxiv_majorana_crawler"
    ]
@@ -211,13 +213,14 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "hindu-sussex",
+   "id": "affiliated-immigration",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-26T14:19:19.190727Z",
      "start_time": "2021-01-26T14:19:19.187730Z"
     },
-    "code_folding": []
+    "code_folding": [],
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -233,12 +236,13 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "unable-proceeding",
+   "id": "hazardous-theme",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-26T14:19:19.440253Z",
      "start_time": "2021-01-26T14:19:19.437254Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -248,12 +252,13 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "cognitive-brick",
+   "id": "dynamic-berry",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-26T14:19:21.113975Z",
      "start_time": "2021-01-26T14:19:19.795077Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -263,12 +268,13 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "restricted-papua",
+   "id": "extended-bronze",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-26T14:22:44.885596Z",
      "start_time": "2021-01-26T14:22:44.875594Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -286,7 +292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "entire-preliminary",
+   "id": "senior-formula",
    "metadata": {},
    "source": [
     "# Making relevant functions"
@@ -295,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "romance-refrigerator",
+   "id": "herbal-knowing",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-26T14:19:21.320158Z",
@@ -311,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "young-variable",
+   "id": "historic-parliament",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-26T14:21:28.157730Z",
@@ -328,52 +334,21 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "suffering-working",
+   "id": "single-boston",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-26T14:30:08.224897Z",
      "start_time": "2021-01-26T14:30:08.219900Z"
-    }
+    },
+    "code_folding": []
    },
    "outputs": [],
-   "source": [
-    "def fill_message(paper, message):\n",
-    "    \n",
-    "    title = paper[\"title\"]\n",
-    "    text = \"\"\n",
-    "    for key in paper:\n",
-    "        text += (key + \": \" + paper[key] + \"\\n\")\n",
-    "    button_text = \"Go to paper in arXiv\"\n",
-    "    paper_link = paper[\"link\"]\n",
-    "    color = \"#40E0D0\"\n",
-    "#     section1 = pymsteams.cardsection() # Create a section\n",
-    "#     section1.title(paper[\"title\"]) # Section Title\n",
-    "#     section1.text(\"Author list: {}\".format(paper[\"author_list\"])) # Section Text\n",
-    "    \n",
-    "    # Add text to the message.\n",
-    "    message.title(title)\n",
-    "    message.text(f'<pre>\\n{text}\\n</pre>')\n",
-    "    message.addLinkButton(button_text, paper_link)\n",
-    "    message.color(color)\n",
-    "#     message.addSection(section1)\n",
-    "    \n",
-    "\n",
-    "\n",
-    "#     # Activity Elements\n",
-    "#     myMessageSection.activityTitle(\"This is Lukas S.\")\n",
-    "#     myMessageSection.activitySubtitle(\"Lukas S. is a PhD candidate in QuTech\")\n",
-    "#     myMessageSection.activityImage(\"https://qutech.nl/wp-content/uploads/2019/09/Lukas-Splitthoff_web-1024x1024.jpg\")\n",
-    "#     myMessageSection.activityText(\"Hello hello, here you got some text. How are you doing today Lukas S.?\")\n",
-    "\n",
-    "#     # Section Images\n",
-    "#     myMessageSection.addImage(\"https://media-exp1.licdn.com/dms/image/C4D03AQH10MkwI0NiBQ/profile-displayphoto-shrink_200_200/0/1585856084148?e=1617235200&v=beta&t=tZbyxeyy7Om4pC2ho-VIUh5_p8Q5wXq70G3se3M0qKw\", \n",
-    "#                               ititle=\"This Alina Kulesh\")\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "agreed-success",
+   "id": "sudden-taylor",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-26T14:30:09.322911Z",
@@ -388,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "fuzzy-clock",
+   "id": "modified-chrome",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-26T14:30:09.563908Z",
@@ -403,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "palestinian-mechanics",
+   "id": "gross-bhutan",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-26T14:30:10.685752Z",
@@ -429,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "smaller-adams",
+   "id": "tested-exhibit",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -437,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "shaped-anchor",
+   "id": "coupled-stupid",
    "metadata": {},
    "outputs": [],
    "source": []
