Added docstrings to fill_mesages

--- a/msbot/msbot_testing.ipynb
+++ b/msbot/msbot_testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "personalized-criminal",
+   "id": "endless-intake",
    "metadata": {
     "heading_collapsed": true
    },
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "virgin-poison",
+   "id": "wired-cleveland",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-26T13:54:14.205738Z",
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "attached-ratio",
+   "id": "expected-elements",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-26T13:54:14.212556Z",
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "reverse-debate",
+   "id": "adopted-utility",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-26T13:54:14.417561Z",
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "polar-appearance",
+   "id": "corrected-bible",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-26T13:54:14.829562Z",
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "marine-brown",
+   "id": "unique-christmas",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-26T13:54:15.232495Z",
@@ -106,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "radio-occasions",
+   "id": "senior-tuner",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-26T13:54:15.742899Z",
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "equal-balance",
+   "id": "clean-breeding",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-26T13:54:16.325793Z",
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "charming-triple",
+   "id": "extra-russell",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-26T13:54:17.989903Z",
@@ -202,25 +202,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "attempted-constraint",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "id": "early-seeker",
+   "metadata": {},
    "source": [
     "# Testing integration with arxiv_majorana_crawler"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "affiliated-immigration",
+   "execution_count": 8,
+   "id": "successful-citizenship",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-26T14:19:19.190727Z",
-     "start_time": "2021-01-26T14:19:19.187730Z"
+     "end_time": "2021-01-27T07:43:09.223705Z",
+     "start_time": "2021-01-27T07:43:05.557501Z"
     },
-    "code_folding": [],
-    "hidden": true
+    "code_folding": []
    },
    "outputs": [],
    "source": [
@@ -235,14 +232,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "hazardous-theme",
+   "execution_count": 9,
+   "id": "cubic-plymouth",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-26T14:19:19.440253Z",
-     "start_time": "2021-01-26T14:19:19.437254Z"
-    },
-    "hidden": true
+     "end_time": "2021-01-27T07:43:09.228457Z",
+     "start_time": "2021-01-27T07:43:09.225451Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -251,14 +247,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "dynamic-berry",
+   "execution_count": 10,
+   "id": "random-trail",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-26T14:19:21.113975Z",
-     "start_time": "2021-01-26T14:19:19.795077Z"
-    },
-    "hidden": true
+     "end_time": "2021-01-27T07:43:10.528240Z",
+     "start_time": "2021-01-27T07:43:09.231455Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -267,21 +262,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "extended-bronze",
+   "execution_count": 11,
+   "id": "knowing-sport",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-26T14:22:44.885596Z",
-     "start_time": "2021-01-26T14:22:44.875594Z"
-    },
-    "hidden": true
+     "end_time": "2021-01-27T07:43:10.535022Z",
+     "start_time": "2021-01-27T07:43:10.530005Z"
+    }
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'id': '2101.09958', 'author_list': 'Kyoung Hwan Choi, Dong Hack Suh', 'title': 'The Origin of Aromaticity: Aromatic Compounds as Intrinsic Topological Superconductors with Majorana Fermion', 'arxiv_primary_category': 'cond-mat.supr-con', 'published': '2021-01-25 08:56:25', 'link': 'http://arxiv.org/abs/2101.09958v1'}\n"
+      "{'id': '2101.10794', 'author_list': 'Juan Carlos Estrada Saldaña, Alexandros Vekris, Luka Pavešič, Peter Krogstrup, Rok Žitko, Kasper Grove-Rasmussen, Jesper Nygård', 'title': 'Bias asymmetric subgap states mimicking Majorana signatures', 'arxiv_primary_category': 'cond-mat.mes-hall', 'published': '2021-01-26 14:11:16', 'link': 'http://arxiv.org/abs/2101.10794v1'}\n"
      ]
     }
    ],
@@ -292,7 +286,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "senior-formula",
+   "id": "disturbed-karaoke",
    "metadata": {},
    "source": [
     "# Making relevant functions"
@@ -300,12 +294,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "herbal-knowing",
+   "execution_count": 1,
+   "id": "complex-mozambique",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-26T14:19:21.320158Z",
-     "start_time": "2021-01-26T14:19:21.315177Z"
+     "end_time": "2021-01-27T07:34:00.584851Z",
+     "start_time": "2021-01-27T07:33:58.449867Z"
     }
    },
    "outputs": [],
@@ -316,12 +310,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "historic-parliament",
+   "execution_count": 2,
+   "id": "artistic-context",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-26T14:21:28.157730Z",
-     "start_time": "2021-01-26T14:21:28.155726Z"
+     "end_time": "2021-01-27T07:34:00.588689Z",
+     "start_time": "2021-01-27T07:34:00.585689Z"
     }
    },
    "outputs": [],
@@ -333,26 +327,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "id": "single-boston",
+   "execution_count": 12,
+   "id": "blind-cambodia",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-26T14:30:08.224897Z",
-     "start_time": "2021-01-26T14:30:08.219900Z"
+     "end_time": "2021-01-27T07:43:10.545024Z",
+     "start_time": "2021-01-27T07:43:10.537007Z"
     },
     "code_folding": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(paper)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "id": "sudden-taylor",
+   "execution_count": 3,
+   "id": "alike-plaza",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-26T14:30:09.322911Z",
-     "start_time": "2021-01-26T14:30:09.319910Z"
+     "end_time": "2021-01-27T07:34:00.596699Z",
+     "start_time": "2021-01-27T07:34:00.590692Z"
     }
    },
    "outputs": [],
@@ -362,8 +369,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "later-painting",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-01-27T07:34:12.653755Z",
+     "start_time": "2021-01-27T07:34:12.642721Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pymsteams.connectorcard"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(message)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 60,
-   "id": "modified-chrome",
+   "id": "modified-treasury",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-26T14:30:09.563908Z",
@@ -378,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "gross-bhutan",
+   "id": "endless-likelihood",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-26T14:30:10.685752Z",
@@ -404,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "tested-exhibit",
+   "id": "liberal-cliff",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -412,7 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "coupled-stupid",
+   "id": "foreign-brisbane",
    "metadata": {},
    "outputs": [],
    "source": []
